<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.tomnelson</groupId>
    <artifactId>jungrapht-visualization-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>JunGrapht Visualization</name>
    <description>Jungrapht-visualization is a port of the Java Universal Network Graph (JUNG)
    visualization and sample code that uses JGrapht graph models and algorithms.</description>
    <url>http://tomnelson.github.io/jungraphtvisualization/</url>
    <licenses>
        <license>
            <name>The BSD License</name>
            <url>https://github.com/tomnelson/jungrapht/blob/master/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>tomnelson</id>
            <name>Tom</name>
            <email>tomnelson@users.noreply.github.com</email>
            <organization>WrenchIO</organization>
            <organizationUrl>https://wrench.io/</organizationUrl>
            <roles>
                <role>Owner</role>
                <role>Developer</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
    </developers>
    <prerequisites>
        <maven>3.1.1</maven>
    </prerequisites>
    <modules>
        <module>jungrapht-visualization</module>
        <module>jungrapht-visualization-samples</module>
    </modules>
    <scm>
        <connection>scm:git:git://github.com/tomnelson/jungrapht.git</connection>
        <developerConnection>scm:git:git://github.com/tomnelson/jungrapht.git</developerConnection>
        <url>https://github.com/tomnelson/jungrapht</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
    <properties>
        <cobertura.plugin.version>2.7</cobertura.plugin.version>
        <compiler.plugin.version>3.8.0</compiler.plugin.version>
        <doclint>none</doclint>
        <fmt.plugin.version>1.8.0</fmt.plugin.version>
        <google-java-format.version>1.3</google-java-format.version>
        <gpg.plugin.version>1.6</gpg.plugin.version>
        <jar.plugin.version>2.6</jar.plugin.version>
        <java.version>11</java.version>
        <javadoc.plugin.version>3.1.0</javadoc.plugin.version>
        <jgrapht.version>1.3.1</jgrapht.version>
        <junit.version>4.12</junit.version>
        <jxr.plugin.version>2.5</jxr.plugin.version>
        <pmd.plugin.version>3.12.0</pmd.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <release.plugin.version>2.5.3</release.plugin.version>
        <source.plugin.version>3.0.1</source.plugin.version>
        <surefire.plugin.version>2.19.1</surefire.plugin.version>
        <truth.version>0.36</truth.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.truth</groupId>
                <artifactId>truth</artifactId>
                <version>${truth.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.truth.extensions</groupId>
                <artifactId>truth-java8-extension</artifactId>
                <version>${truth.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jgrapht</groupId>
                <artifactId>jgrapht-core</artifactId>
                <version>${jgrapht.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jgrapht</groupId>
                <artifactId>jgrapht-guava</artifactId>
                <version>${jgrapht.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <defaultGoal>clean verify</defaultGoal>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.github.ekryd.sortpom</groupId>
                    <artifactId>sortpom-maven-plugin</artifactId>
                    <version>2.4.0</version>
                    <executions>
                        <execution>
                            <id>sort-pom</id>
                            <goals>
                                <goal>sort</goal>
                            </goals>
                            <phase>process-sources</phase>
                            <configuration>
                                <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
                                <createBackupFile>false</createBackupFile>
                                <lineSeparator>\n</lineSeparator>
                                <expandEmptyElements>false</expandEmptyElements>
                                <nrOfIndentSpace>4</nrOfIndentSpace>
                                <sortDependencies>scope,groupId,artifactId</sortDependencies>
                                <sortPlugins>groupId,artifactId</sortPlugins>
                                <sortProperties>true</sortProperties>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler.plugin.version}</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${release.plugin.version}</version>
                    <configuration>
                        <mavenExecutorId>forked-path</mavenExecutorId>
                        <useReleaseProfile>false</useReleaseProfile>
                        <arguments>${arguments} -Psonatype-oss-release</arguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.8.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.coveo</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
                <version>${fmt.plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.google.googlejavaformat</groupId>
                        <artifactId>google-java-format</artifactId>
                        <version>${google-java-format.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <!-- generates aggregated javadoc for root project -->
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc.plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${jxr.plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${pmd.plugin.version}</version>
                <configuration>
                    <targetJdk>${java.version}</targetJdk>
                    <linkXref>true</linkXref>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>
    <profiles>
        <profile>
            <id>sonatype-oss-release</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <phase>verify</phase>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${javadoc.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <additionalparam>-Xdoclint:none</additionalparam>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${source.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
